<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemHome"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/tituloHome"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuItemCalendar"
        android:icon="@drawable/baseline_calendar_24"
        android:title="@string/tituloCalendario"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuItemTareas"
        android:icon="@drawable/baseline_tareas_24"
        android:title="@string/tituloTareas"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuItemMarketplace"
        android:icon="@drawable/baseline_marketplace_24"
        android:title="@string/tituloMarketplace"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuItemOtros"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/tituloOtros"
        app:showAsAction="ifRoom" />

</menu>