<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/txtTituloDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/a_ade_una_tarea" />

    <TextView
        style="@style/txtViewMediano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/descripci_n_de_la_tarea" />

    <EditText
        android:id="@+id/atdEtDescripcionTarea"
        style="@style/editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/descripcion"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        style="@style/txtViewMediano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pregunta_cual_mascota" />

    <EditText
        android:id="@+id/atdEtMascota"
        style="@style/editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/escribe_su_nombre_correctamente"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        style="@style/txtViewMediano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pregunta_periodicidad_tarea" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/atdRdBtnRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/regular" />

        <RadioButton
            android:id="@+id/atdRdBtnHoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/solo_para_hoy" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/atdBtnCancelar"
            style="@style/btnSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/atdBtnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/aceptar" />

    </LinearLayout>

</LinearLayout>