<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".RegistroMascotaActivity">

    <Button
        android:id="@+id/rmaBtnOmitir"
        style="@style/btnSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/txtOmitir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rmaTvTitulo"
        style="@style/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:text="@string/tituloRegistroMascota"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/rmaTvTitulo">

        <ScrollView
            android:id="@+id/rmfScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/rmfLinearLayoutGrupal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/txtViewMediano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/pregunta_nombre_mascota" />

                <EditText
                    android:id="@+id/rmfEtNombreMascota"
                    style="@style/editTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:autofillHints="nombre de la mascota"
                    android:hint="@string/nombre"
                    android:inputType="text" />

                <TextView
                    style="@style/txtViewMediano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/pregunta_mascota_nacimiento" />

                <EditText
                    android:id="@+id/rmfEtFechaNacimiento"
                    style="@style/editTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:autofillHints="dia de nacimiento"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/hintFechaNacimiento"
                    android:inputType="none"
                    tools:ignore="KeyboardInaccessibleWidget" />

                <TextView
                    style="@style/txtViewMediano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/pregunta_especie_mascota" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/rmfImgVwPerro"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="20dp"
                        android:contentDescription="@string/imagen_especie_de_la_mascota"
                        android:scaleType="centerCrop"
                        android:src="@drawable/perro" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/perro"
                        android:orientation="vertical">

                        <RadioGroup
                            android:id="@+id/rmfRdGrpEspecie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rmfRdBtnPerro"
                                style="@style/txtViewMediano"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/perro" />

                            <RadioButton
                                android:id="@+id/rmfRdBtnGato"
                                style="@style/txtViewMediano"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gato" />

                        </RadioGroup>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/rmfImgVwGato"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="20dp"
                        android:contentDescription="@string/imagen_especie_de_la_mascota"
                        android:scaleType="centerCrop"
                        android:src="@drawable/gato" />

                </LinearLayout>

                <TextView
                    style="@style/txtViewMediano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/pregunta_mascota_medicacion" />

                <CheckBox
                    android:id="@+id/rmfChBxMedicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/si" />

                <TextView
                    style="@style/txtViewMediano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/pregunta_mascotas_comidas" />


                <Spinner
                    android:id="@+id/rmfSpinnerNumeroComidas"
                    style="@style/spinner"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    style="@style/txtViewMediano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/pregunta_mascota_gramos_comida" />

                <EditText
                    android:id="@+id/rmfEtDosisDiaria"
                    style="@style/editTxt"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/dosis"
                    android:autofillHints = ""
                    android:inputType="number" />

                <TextView
                    android:id="@+id/rmfTxtViewTituloPaseos"
                    style="@style/txtViewMediano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/pregunta_mascota_paseos"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/rmfSpinnerPaseos"
                    style="@style/spinner"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/rmfTxtVwTituloLimpiezaArena"
                    style="@style/txtViewMediano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/pregunta_mascota_limpieza_arena"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/rmfSpinnerArena"
                    style="@style/spinner"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone" />


                <Button
                    android:id="@+id/rmfBtnRegistrarMascota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:text="@string/txtEnviarDatos" />

                <Space
                    android:id="@+id/rmfSpaceFinal"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>