<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MarketplaceFragment">

    <TextView
        android:id="@+id/maTvTituloMp"
        style="@style/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/marketplace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/maTvExplicacion1"
        style="@style/txtViewMediano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/explicacionMarketplace1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maTvTituloMp" />

    <TextView
        android:id="@+id/maTvExplicacion2"
        style="@style/txtViewMediano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explicacionMarketplace2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maTvExplicacion1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/maRecyclerViewProductos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/maSpaceBottomBar"
        app:layout_constraintTop_toBottomOf="@+id/maTvExplicacion2"
        app:spanCount="2"
        tools:listitem="@layout/item_marketplace_productos">

    </androidx.recyclerview.widget.RecyclerView>

    <Space
        android:id="@+id/maSpaceBottomBar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>